--- a/Index.html
+++ b/Index.html
@@ -16,12 +16,13 @@
                 <div class="row">
                     <img src="Resources/img/logo-white.png" alt="Omnifood logo" class="logo">
                     <img src="Resources/img/logo.png" alt="Omnifood logo" class="logo-black">
-                    <ul class="main-nav">
+                    <ul class="main-nav js--main-nav">
                         <li><a href="#features">Food delivery</a></li>
                         <li><a href="#works">How it works</a></li>
                         <li><a href="#cities">Our cities</a></li>
                         <li><a href="#plans">Sign up</a></li>
                     </ul>
+                    <a class="mobile-nav-icon js--nav-icon"><i class="ion-navicon-round"></i></a>
                 </div>
             </nav>
             <div class="hero-text-box">
@@ -128,7 +129,7 @@
             </div>
             <div class="row">
                 <div class="col span-1-of-2 steps-box">
-                    <img src="Resources/img/app-iPhone.png" alt="Omnifood app on iPhone" class="app-screen">
+                    <img src="Resources/img/app-iPhone.png" alt="Omnifood app on iPhone" class="app-screen js--wp-2">
                 </div>
                 <div class="col span-1-of-2 steps-box">
                     <div class="works-step">
@@ -151,7 +152,7 @@
         </section>
         
         <section class="section-cities" id="cities">
-            <div class="row">
+            <div class="row js--wp-3">
                 <h2>We're currently in these cities</h2>
             </div>
             <div class="row">
@@ -256,7 +257,7 @@
             </div>
             <div class="row">
                 <div class="col span-1-of-3">
-                    <div class="plan-box">
+                    <div class="plan-box js--wp-4">
                         <div>
                             <h3>Premium</h3>
                             <p class="plan-price">$399 <span>/ month</span></p>
